--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,14 @@
 
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/registration
+    username: your_username_here
+    password: your_password_here
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        '[format_sql]': true
+    show-sql: true
