basic login application

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,9 @@
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/registration
-    username: your_username_here
-    password: your_password_here
+    username: postgres
+    password: postgres
+
   jpa:
     hibernate:
       ddl-auto: update
