--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,14 +6,18 @@ spring:
   servlet:
     multipart:
       enabled: true
-      max-file-size: 25MB
-      max-request-size: 25MB
+      max-file-size: 10MB
+      max-request-size: 10MB
 
   datasource:
-    url: "jdbc:postgresql://localhost:5432/registration"
+    url: jdbc:postgresql://localhost:5432/registration
     username: postgres
     password: postgres
 
   jpa:
     hibernate:
       ddl-auto: update
+
+server:
+  port: 9090
+  
