popular and search page and functionality

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,13 @@
         <artifactId>AppleJavaExtensions</artifactId>
         <version>1.4</version>
     </dependency>
+
+    
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
+        <version>4.4</version>
+    </dependency>
 </dependencies>
 
     <build>
