update aws buckets

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,13 @@
+aws:
+  s3:
+    AWS_S3_BUCKET_PROFILE_IMAGES: shelved-profile-pictures-benlimpic
+    AWS_S3_BUCKET_COLLECTION_IMAGES: shelved-collection-images-benlimpic
+    AWS_S3_BUCKET_ITEM_IMAGES: shelved-item-images-benlimpic
 
 spring:
   web:
     resources:
-      static-locations: classpath:/static/,file:./profile-pictures/
+      static-locations: classpath:/static/
 
   servlet:
     multipart:
@@ -21,7 +26,3 @@ spring:
 
 server:
   port: 9090
-
-
-  
-  
