--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
     <dependency>
         <groupId>org.thymeleaf.extras</groupId>
         <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        <version>RELEASE</version>
     </dependency>
 
     <!-- PostgreSQL Driver -->
