--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/node_modules
+/node_modules/
 
 ### STS ###
 .apt_generated
